# ai_run_in_rust

./: .gitignore  Cargo.toml  README.md  README_CN.md
dev/: model.py
hooks/: pre-commit
src/: main.rs
