[package]
name = "ai_run_in_rust"
description = """# **所有的API都在这里了**<br>
**featurs and issues** ：

    1、暂时无法解决模型文件打包问题，通过命令行参数外部设定解决
    2、支持多线程并发
    3、支持后台任务
    4、无需python环境
    5、一次编译到处运行
    6、即将支持sdxl，baichaun2等大模型

**api调用示例**:
```python
import json
import time
import requests
url = "http://127.0.0.1:3000/infer"
data = {"data":[1,2,3,4,5]}
response = requests.post(url,json=data)
response.status_code
x = json.loads(response.text)
print(x)
```
"""
version = "0.1.0"
edition = "2021"

[author]
name = "lijian"
email = "limoncc@icloud.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libtorch
tch = "0.13.0"
# web api 需要的库
blake3 = "1.4.1"
axum = "0.6.20"
tracing = "0.1"
tracing-subscriber = "0.2.0"
tokio = { version = "1.0", features = ["full"] }
# 处理数据
serde = "1.0.188"
# 文档
serde_json = "1.0.107"
utoipa = {version ="3.5.0" ,features = ["axum_extras"] }
utoipa-rapidoc = {version = "0.1", features = ["axum"] }
#utoipa-swagger-ui = {version = "3",features = ["axum"] }

# 命令行工具
# clap = "4.4.3"
# 静态资源打包
#rust-embed = {version="8.0.0",features=['debug-embed']}
